# new_tictactoe

./: .gitignore  Readme.md  __init__.py  main.py  pyproject.toml  requirements.txt  tictactoe_gui.py  tictactoe_ui.py  tictactoe_ui.ui
game_core/: board.py  game_functions.py  grid.py  minimax_algo.py
players/: players.py  players_class.py
tests/game_core/: test_board.py  test_game_functions.py
