[tool.poetry]
name = "tictactoe"
version = "0.1.0"
description = ""
authors = ["bsao17 <declic62@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = {version = "*", allow-prereleases = true}
fastapi = {extras = ["all"], version = "^0.104.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
